--- a/Resources/Prototypes/_Impstation/Entities/Objects/Consumables/Food/meals.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Objects/Consumables/Food/meals.yml
@@ -6,6 +6,9 @@
   id: FoodMealBigLollipop
   description: Wow!!! It's as big as your head!!!
   components:
+  - type: Tag
+    tags:
+    - FoodSnack
   - type: Food
     trash:
     - FoodKebabSkewer
@@ -21,9 +24,82 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 15
+        maxVol: 30
         reagents:
         - ReagentId: Nutriment
           Quantity: 5
         - ReagentId: Sugar
           Quantity: 10
+
+- type: entity
+  name: cloth lollipop
+  parent: FoodMealBigLollipop
+  id: FoodMealClothLollipop
+  description: Woven with love.
+  components:
+  - type: Tag
+    tags:
+    - FoodSnack
+    - ClothMade
+  - type: Food
+    requiresSpecialDigestion: true
+    trash:
+    - FoodKebabSkewer
+  - type: FlavorProfile
+    flavors:
+      - whimsy
+      - sugar
+      - cotton
+  - type: Sprite
+    sprite: _Impstation/Objects/Consumable/Food/meals.rsi
+    state: cloth-lollipop
+  - type: Item
+    heldPrefix: cloth-lollipop
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 30
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 5
+        - ReagentId: Sugar
+          Quantity: 10
+        - ReagentId: Fiber
+          Quantity: 10
+
+- type: entity
+  name: fruit lollipop
+  parent: FoodMealBigLollipop
+  id: FoodMealFruitLollipop
+  description: Didn't this come out of a microwave? How did the chef even do this?
+  components:
+  - type: Tag
+    tags:
+    - FoodSnack
+  - type: Food
+    trash:
+    - FoodKebabSkewer
+  - type: FlavorProfile
+    flavors:
+      - whimsy
+      - fruity
+  - type: Sprite
+    sprite: _Impstation/Objects/Consumable/Food/meals.rsi
+    state: fruit-lollipop
+  - type: Item
+    heldPrefix: fruit-lollipop
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 30
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 5
+        - ReagentId: Sugar
+          Quantity: 5
+        - ReagentId: JuiceOrange
+          Quantity: 5
+        - ReagentId: JuiceApple
+          Quantity: 5
+        - ReagentId: JuiceWatermelon
+          Quantity: 5
