--- a/Resources/Prototypes/_Impstation/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_Impstation/Recipes/Cooking/meal_recipes.yml
@@ -7,3 +7,38 @@
      Sugar: 10
   solids:
      FoodKebabSkewer: 1 #it's healthy for microwaves
+
+- type: microwaveMealRecipe
+  id: RecipeClothLollipop
+  name: cloth lollipop recipe
+  result: FoodMealClothLollipop
+  time: 5
+  reagents:
+     Sugar: 10
+     Fiber: 10
+  solids:
+     FoodKebabSkewer: 1
+
+- type: microwaveMealRecipe
+  id: RecipeFruitLollipop
+  name: fruit lollipop recipe
+  result: FoodMealFruitLollipop
+  time: 5
+  reagents:
+     Sugar: 10
+     Ice: 5
+     JuiceOrange: 5
+     JuiceApple: 5
+     JuiceWatermelon: 5
+  solids:
+     FoodKebabSkewer: 1
+
+- type: microwaveMealRecipe
+  id: RecipeMeatLollipop
+  name: meat lollipop recipe
+  result: FoodMealMeatLollipop
+  time: 5
+  reagents:
+     Sugar: 10
+  solids:
+     FoodKebabSkewer: 1
