i hope i didnt forget anything

--- a/Resources/Prototypes/_Impstation/Entities/Objects/Consumables/Food/meals.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Objects/Consumables/Food/meals.yml
@@ -141,7 +141,7 @@
 - type: entity
   name: entro-pop
   parent: FoodMealBigLollipop
-  id: FoodMealCultLollipop
+  id: FoodMealCultLollipop #no recipe yet but it is a rare spawn from meal spawners
   description: It seems to flicker in and out of view, your eyes never truly focusing on it. It's cosmically delicious!
   components:
   - type: Tag
