--- a/Resources/Prototypes/_Impstation/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_Impstation/Recipes/Cooking/meal_recipes.yml
@@ -26,7 +26,7 @@
   time: 5
   reagents:
      Sugar: 10
-     Ice: 5
+     Ice: 5 #i don't KNOW!!!
      JuiceOrange: 5
      JuiceApple: 5
      JuiceWatermelon: 5
