it have fresium now

--- a/Resources/Prototypes/_Impstation/Entities/Objects/Consumables/Food/meals.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Objects/Consumables/Food/meals.yml
@@ -169,5 +169,5 @@
           Quantity: 5
         - ReagentId: Sugar
           Quantity: 10
-        - ReagentId: Frezon
+        - ReagentId: Fresium
           Quantity: 10
