--- a/Resources/Prototypes/_Goobstation/tags.yml
+++ b/Resources/Prototypes/_Goobstation/tags.yml
@@ -17,6 +17,18 @@
   id: ExtendedEmergencyOxygenTank
 
 - type: Tag
+  id: Heart
+
+- type: Tag
+  id: Liver
+
+- type: Tag
+  id: Lungs
+
+- type: Tag
+  id: Organ
+
+- type: Tag
   id: SecurityBreathMask
 
 - type: Tag
