--- a/Resources/Prototypes/_Shitmed/Entities/Surgery/surgeries.yml
+++ b/Resources/Prototypes/_Shitmed/Entities/Surgery/surgeries.yml
@@ -605,12 +605,12 @@
   - type: SurgeryOrganOnAddCondition
     components:
       brain:
-        - type: OhioAccent
+        #- type: OhioAccent # DeltaV
         - type: RatvarianLanguage
         - type: Clumsy
-          clumsyDamage: # Placeholder values to be able to initialize the component
-            types:
-              Blunt: 0
+          #clumsyDamage: # Placeholder values to be able to initialize the component
+          #  types:
+          #    Blunt: 0
     inverse: true
   - type: SurgeryPartCondition
     part: Head
@@ -632,12 +632,12 @@
   - type: SurgeryOrganOnAddCondition
     components:
       brain:
-        - type: OhioAccent
+        #- type: OhioAccent # DeltaV
         - type: RatvarianLanguage
         - type: Clumsy
-          clumsyDamage:
-            types:
-              Blunt: 0
+          #clumsyDamage:
+          #  types:
+          #    Blunt: 0
   - type: SurgeryPartCondition
     part: Head
 
