--- a/Resources/Prototypes/borg_types.yml
+++ b/Resources/Prototypes/borg_types.yml
@@ -155,6 +155,7 @@
 
   defaultModules:
   - BorgModuleTreatment
+  - BorgModuleSurgery # DeltaV
 
   radioChannels:
   - Science
@@ -168,6 +169,8 @@
   - type: ShowHealthIcons
     damageContainers:
     - Biological
+  - type: SurgeryTarget # Shitmed
+  - type: Sanitized # Shitmed
 
   # Visual
   inventoryTemplateId: borgDutch
