--- a/Resources/Prototypes/_Goobstation/tags.yml
+++ b/Resources/Prototypes/_Goobstation/tags.yml
@@ -17,7 +17,16 @@
   id: ExtendedEmergencyOxygenTank
 
 - type: Tag
+  id: Brain
+
+- type: Tag
+  id: Eyes
+
+- type: Tag
   id: Heart
+
+- type: Tag
+  id: Kidneys
 
 - type: Tag
   id: Liver
@@ -27,6 +36,12 @@
 
 - type: Tag
   id: Organ
+
+- type: Tag
+  id: Stomach
+
+- type: Tag
+  id: Tongue
 
 - type: Tag
   id: SecurityBreathMask
