--- a/Resources/Prototypes/_Impstation/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -50,7 +50,7 @@
   parent: [ ClothingOuterHardsuitBase, BaseSyndicateContraband ]
   id: ClothingOuterHardsuitSyndieSec
   name: blood-red peacekeeper hardsuit
-  description: A heavily armored hardsuit designed for work in special operations. Property of Gorlex Marauders.
+  description: An armored-enough hardsuit designed for work in routine security operations. Property of RiC Office Supply.
   components:
   - type: Sprite
     sprite: _Impstation/Clothing/OuterClothing/Hardsuits/syndiesec.rsi
@@ -66,12 +66,10 @@
   - type: Armor
     modifiers:
       coefficients:
-        Blunt: 0.5
-        Slash: 0.5
+        Blunt: 0.6
+        Slash: 0.6
         Piercing: 0.5
-        Heat: 0.5
-        Radiation: 0.5
-        Caustic: 0.5
+        Heat: 0.9
   - type: ClothingSpeedModifier
     walkModifier: 0.9
     sprintModifier: 0.9
