--- a/Resources/Prototypes/_Impstation/Datasets/Names/apid_names.yml
+++ b/Resources/Prototypes/_Impstation/Datasets/Names/apid_names.yml
@@ -23,6 +23,13 @@
   - Mason
   - Leafcutter
 
+- type: dataset
+  id: apid_secoff
+  values:
+  - Watcher
+  - Protector
+  - Officer
+
 - type: dataset #ANGRY BEE NOISES
   id: names_apid
   values:
