--- a/Resources/Prototypes/_Impstation/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/_Impstation/Loadouts/loadout_groups.yml
@@ -302,4 +302,4 @@
     pocket2: WeaponPistolMk93
     ears: ClothingHeadsetSecurity
     eyes: ClothingEyesGlassesSecurity
-    mask: ClothingMaskGasMerc
+    #mask: ClothingMaskGasMerc
