--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/monument.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/monument.yml
@@ -214,6 +214,7 @@
   suffix: Stage 4, DO NOT MAP
   components:
   - type: CosmicMonument
+  - type: CosmicTest
   - type: Sprite
     sprite: _Impstation/CosmicCult/Tileset/monument.rsi
     layers:
