--- a/Resources/Prototypes/_Impstation/CosmicCult/roundstart.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/roundstart.yml
@@ -12,7 +12,7 @@
     objectives:
     - CosmicFinalityObjective
     - CosmicMonumentObjective
-    - CosmicLeadershipObjective
+    # - CosmicLeadershipObjective
     - CosmicEntropyObjective
   - type: AntagSelection
     agentName: cosmiccult-roundend-name
