comment out greencomms

--- a/Resources/Prototypes/Entities/Clothing/Ears/headsets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Ears/headsets.yml
@@ -8,10 +8,10 @@
   - type: ContainerContainer
     containers:
       key_slots: !type:Container
-  - type: ContainerFill
-    containers:
-      key_slots:
-      - EncryptionKeyCommon
+  #- type: ContainerFill
+  #  containers:
+  #    key_slots:
+  #    - EncryptionKeyCommon
   - type: Headset
   - type: EncryptionKeyHolder
     keySlots: 4
@@ -45,7 +45,7 @@
     containers:
       key_slots:
       - EncryptionKeyCargo
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/cargo.rsi
   - type: Clothing
@@ -73,7 +73,7 @@
       key_slots:
       - EncryptionKeyCargo
       - EncryptionKeyCommand
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
 
 - type: entity
   parent: [ ClothingHeadset, BaseCentcommContraband ]
@@ -118,7 +118,7 @@
     containers:
       key_slots:
       - EncryptionKeyEngineering
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/engineering.rsi
   - type: Clothing
@@ -135,7 +135,7 @@
       key_slots:
       - EncryptionKeyEngineering
       - EncryptionKeyCommand
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: StealTarget #imp
     stealGroup: CommandHeadset
 
@@ -149,7 +149,7 @@
     containers:
       key_slots:
       - EncryptionKeyMedical
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/medical.rsi
   - type: Clothing
@@ -166,7 +166,7 @@
       key_slots:
       - EncryptionKeyMedical
       - EncryptionKeyCommand
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: StealTarget #imp
     stealGroup: CommandHeadset
 
@@ -180,7 +180,7 @@
     containers:
       key_slots:
       - EncryptionKeyScience
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/science.rsi
   - type: Clothing
@@ -196,7 +196,7 @@
     containers:
       key_slots:
       - EncryptionKeyMedicalScience
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/medicalscience.rsi
   - type: Clothing
@@ -212,7 +212,7 @@
     containers:
       key_slots:
       - EncryptionKeyRobo
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/robotics.rsi
   - type: Clothing
@@ -229,7 +229,7 @@
       key_slots:
       - EncryptionKeyScience
       - EncryptionKeyCommand
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: StealTarget #imp
     stealGroup: CommandHeadset
 
@@ -243,7 +243,7 @@
     containers:
       key_slots:
       - EncryptionKeySecurity
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/security.rsi
   - type: Clothing
@@ -259,7 +259,7 @@
     containers:
       key_slots:
       - EncryptionKeySecurity
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
       - EncryptionKeyCommand
   - type: Sprite
     sprite: Clothing/Ears/Headsets/security.rsi
@@ -279,7 +279,7 @@
       key_slots:
       - EncryptionKeyMedical
       - EncryptionKeySecurity
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/brigmedic.rsi
   - type: Clothing
@@ -295,7 +295,7 @@
     containers:
       key_slots:
       - EncryptionKeyService
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: Clothing/Ears/Headsets/service.rsi
   - type: Clothing
