--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -94,12 +94,12 @@
   - type: IntrinsicRadioTransmitter
     channels:
     - Binary
-    - Common
+    # - Common
     - Science
   - type: ActiveRadio
     channels:
     - Binary
-    - Common
+    # - Common
     - Science
   - type: ZombieImmune
   - type: Repairable
