--- a/Resources/Prototypes/Entities/Objects/Specific/Robotics/mmi.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Robotics/mmi.yml
@@ -25,7 +25,7 @@
   - type: ActiveRadio
     channels:
     - Binary
-    - Common
+  #  - Common
   - type: NameIdentifier
     group: MMI
   - type: DoAfter
@@ -104,7 +104,7 @@
     - type: ActiveRadio
       channels:
       - Binary
-      - Common
+    #  - Common
     - type: NameIdentifier
       group: PositronicBrain
     - type: DoAfter
