--- a/Resources/Prototypes/_Impstation/Entities/Clothing/Ears/headsets.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Clothing/Ears/headsets.yml
@@ -9,7 +9,7 @@
       key_slots:
       - EncryptionKeyCargo
       - EncryptionKeyCommand
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: _Impstation/Clothing/Ears/Headsets/commandveteranqm.rsi
   - type: Clothing
@@ -45,7 +45,7 @@
       key_slots:
       - EncryptionKeyEngineering
       - EncryptionKeyCommand
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: _Impstation/Clothing/Ears/Headsets/commandveterance.rsi
   - type: Clothing
@@ -64,7 +64,7 @@
       key_slots:
       - EncryptionKeyMedical
       - EncryptionKeyCommand
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: _Impstation/Clothing/Ears/Headsets/commandveterancmo.rsi
   - type: Clothing
@@ -83,7 +83,7 @@
       key_slots:
       - EncryptionKeyScience
       - EncryptionKeyCommand
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
   - type: Sprite
     sprite: _Impstation/Clothing/Ears/Headsets/commandveteranrd.rsi
   - type: Clothing
@@ -101,7 +101,7 @@
     containers:
       key_slots:
       - EncryptionKeySecurity
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
       - EncryptionKeyCommand
   - type: Sprite
     sprite: _Impstation/Clothing/Ears/Headsets/commandveteranhos.rsi
@@ -120,7 +120,7 @@
     containers:
       key_slots:
       - EncryptionKeySecurity
-      - EncryptionKeyCommon
+      #- EncryptionKeyCommon
       - EncryptionKeyCommand
   - type: Sprite
     sprite: _Impstation/Clothing/Ears/Headsets/securitywarden.rsi
