--- a/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
@@ -467,7 +467,7 @@
     - FootstepSound
     - Bot
   - type: IntrinsicRadioReceiver
-  #- type: IntrinsicRadioTransmitter
+  - type: IntrinsicRadioTransmitter
     channels:
     # - Common
     - Supply
